Replace photos with provided assets

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <!-- ===== Hero Section ===== -->
     <section class="hero-section">
       <div class="hero-image">
-        <img src="images/hero_new.jpg" alt="宗像大島の風景">
+        <img src="images/top_hero.jpg" alt="砲台跡から望む風車と海">
+        <img src="images/top_overlay_design.png" class="hero-overlay-design" alt="五色の旅">
         <div class="hero-title-overlay">
           <span class="hero-kicker">福岡・宗像｜フェリーで25分の世界遺産</span>
           <h1>「むなかた大島・五色の旅」で、<br>願いを叶える週末を。</h1>
@@ -98,8 +99,8 @@
           </div>
           <div class="plan-card-body">
             <figure class="plan-figure">
-              <img src="images/plan_yellow.jpg" alt="甘夏収穫体験の様子">
-              <img src="images/plan_yellow_2.jpg" alt="甘夏体験の集合写真">
+              <img src="images/plan_yellow_1.webp" alt="甘夏収穫体験の様子">
+              <img src="images/plan_yellow_2.webp" alt="甘夏体験の集合写真">
             </figure>
             <p class="plan-description">
               大島の春を象徴する柑橘「甘夏」。3月初旬から5月末にかけて、島内の農家の圃場に足を運び、たわわに実った甘夏みかんを自分の手で収穫するところから体験が始まります。太陽の光をたっぷり浴びて育った甘夏は、酸味と甘みのバランスが絶妙。収穫後は、地元の講師の指導のもと、もぎたての果実を使って甘夏ソースや爽やかな甘夏シェイクを手作りします。
@@ -128,8 +129,8 @@
           </div>
           <div class="plan-card-body">
             <figure class="plan-figure">
-              <img src="images/plan_red.jpg" alt="宗像大社の鳥居で着物参拝">
-              <img src="images/plan_red_2.jpg" alt="着物姿で海をバックに">
+              <img src="images/plan_red_1.webp" alt="宗像大社の鳥居で着物参拝">
+              <img src="images/plan_red_2.webp" alt="着物姿で海をバックに">
             </figure>
             <p class="plan-description">
               「五色の旅」の中で最もハイエンドなプランです。朝、玄海旅館に集合し、プロの手による着付けで正装に身を整えるところから一日が始まります。背筋を伸ばし、着物をまとった状態で宗像大社辺津宮へ。毎月1日・15日にのみ執り行われる「月次祭（つきなみさい）」を観覧する貴重な機会に参列します。通常の観光では入ることのできない神聖な空間で、良縁と感謝を祈る時間は、参加者にとって忘れがたい記憶となるでしょう。
@@ -158,8 +159,8 @@
           </div>
           <div class="plan-card-body">
             <figure class="plan-figure">
-              <img src="images/plan_green.png" alt="御嶽山トレッキングの様子">
-              <img src="images/plan_green_2.jpg" alt="風車展望所からの夕景">
+              <img src="images/plan_green_1.webp" alt="御嶽山トレッキングの様子">
+              <img src="images/plan_green_2.webp" alt="風車展望所からの夕景">
             </figure>
             <p class="plan-description">
               大島の最高峰・御嶽山（みたけさん、標高224m）は、世界遺産の構成資産として認められた神聖な山です。経験豊富な島のガイドとともに、原生林の木漏れ日を浴びながら山道を歩き、山頂を目指します。登山道の途中には、戦時中に築かれた砲台跡が残り、島の歴史を肌で感じることができます。山頂からは360度の大パノラマが広がり、玄界灘と沖ノ島方面の水平線が一望。天気のいい日には、遠く壱岐・対馬の島影まで見渡せることもあります。
@@ -188,8 +189,8 @@
           </div>
           <div class="plan-card-body">
             <figure class="plan-figure">
-              <img src="images/plan_purple.png" alt="大島の夕暮れと星空">
-              <img src="images/plan_purple_2.jpg" alt="満天の星空">
+              <img src="images/plan_purple_1.webp" alt="大島の夕暮れと星空">
+              <img src="images/plan_purple_2.webp" alt="満天の星空">
             </figure>
             <p class="plan-description">
               大島の夜は、都会では想像もつかないほどの暗さと静けさに包まれます。このプランは、最終フェリーが出航した後の「島時間」を丸ごと味わう宿泊型のプログラムです。夕方に集合し、島の民宿「とかいやゲストハウス」にチェックインした後、ガイドとともに砲台跡の高台へ。玄界灘の水平線に沈む夕日を眺め、空がオレンジからだんだんと群青に変わっていく劇的な時間を共有します。
@@ -218,8 +219,8 @@
           </div>
           <div class="plan-card-body">
             <figure class="plan-figure">
-              <img src="images/plan_white.png" alt="塩作り体験の様子">
-              <img src="images/plan_white_2.png" alt="塩爺こと河辺さん">
+              <img src="images/plan_white_1.webp" alt="塩作り体験の様子">
+              <img src="images/plan_white_2.webp" alt="塩爺こと河辺さん">
             </figure>
             <p class="plan-description">
               大島村商店を営む「塩爺（しおじい）」こと河辺さんは、大島の海水から塩をイチから手作りし、販売まで手がける島の有名人です。このプランでは、河辺さんの案内のもと、海水を汲み上げ、薪の火で丁寧に炊き上げて塩の結晶を作り出す一連の工程を体験します。塩作りの背景にある海と山の関係、大島の自然環境のことを、河辺さんの軽妙な語り口で学ぶ時間は、子どもから大人まで誰もが夢中になるひとときです。
