Replace coastline image with five colors banner

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       </p>
 
       <figure class="article-figure">
-        <img src="images/background_new.jpg" alt="大島の海岸線">
-        <figcaption>美しい海岸線が広がる宗像大島。島全体が「非日常」に包まれている</figcaption>
+        <img src="images/five_colors_banner.png" alt="五色の旅 — 赤・黄・緑・紫・白の5つの体験">
+        <figcaption>5つの色に込められた、それぞれの「願い」と「体験」</figcaption>
       </figure>
 
       <p>
