Restore missing food image in Red plan

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
           <div class="plan-card-body">
             <figure class="plan-figure">
               <img src="images/plan_red_1.webp" alt="宗像大社の鳥居で着物参拝">
+              <img src="images/plan_red_2.webp" alt="玄海旅館で味わう新鮮な地魚料理">
             </figure>
             <p class="plan-description">
               「五色の旅」の中で最もハイエンドなプランです。朝、玄海旅館に集合し、プロの手による着付けで正装に身を整えるところから一日が始まります。背筋を伸ばし、着物をまとった状態で宗像大社辺津宮へ。毎月1日・15日にのみ執り行われる「月次祭（つきなみさい）」を観覧する貴重な機会に参列します。通常の観光では入ることのできない神聖な空間で、良縁と感謝を祈る時間は、参加者にとって忘れがたい記憶となるでしょう。
