Split lead text into separate paragraphs

--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
 
       <!-- Lead -->
       <p class="lead-text">
-        福岡県宗像市の沖合に浮かぶ「宗像大島」。「神宿る島」沖ノ島と並ぶ世界遺産の構成資産を有するこの島は、博多から最も近い"非日常の聖地"です。七夕伝説発祥の地ともいわれる大島にちなみ、島の資源——信仰・自然・食・人——を<strong>「5色の短冊（願い）」</strong>に見立てた体験プログラム「五色の旅」が始まりました。忙しい日常の中で、自分の願い（色）に合わせた体験を選び、島で<strong>「自分をほどく」</strong>時間を過ごしてみませんか。
+        福岡県宗像市の沖合に浮かぶ「宗像大島」。
+      </p>
+      <p class="lead-text">
+        「神宿る島」沖ノ島と並ぶ世界遺産の構成資産を有するこの島は、博多から最も近い"非日常の聖地"です。
+      </p>
+      <p class="lead-text">
+        七夕伝説発祥の地ともいわれる大島にちなみ、島の資源——信仰・自然・食・人——を<strong>「5色の短冊（願い）」</strong>に見立てた体験プログラム「五色の旅」が始まりました。
+      </p>
+      <p class="lead-text">
+        忙しい日常の中で、自分の願い（色）に合わせた体験を選び、島で<strong>「自分をほどく」</strong>時間を過ごしてみませんか。
       </p>
 
       <!-- ===== Section 1: Introduction ===== -->
