Remove emotion keywords from plan color labels

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="plan-card-header">
             <div class="plan-color-icon">🍊</div>
             <div class="plan-header-text">
-              <span class="plan-color-label">黄 — 元気</span>
+              <span class="plan-color-label">黄</span>
               <span class="plan-title">甘夏収穫と甘夏ソース作り体験</span>
             </div>
           </div>
@@ -119,7 +119,7 @@
           <div class="plan-card-header">
             <div class="plan-color-icon">⛩️</div>
             <div class="plan-header-text">
-              <span class="plan-color-label">赤 — 縁・情熱</span>
+              <span class="plan-color-label">赤</span>
               <span class="plan-title">着物で巡る宗像三女神体験</span>
             </div>
           </div>
@@ -149,7 +149,7 @@
           <div class="plan-card-header">
             <div class="plan-color-icon">🌿</div>
             <div class="plan-header-text">
-              <span class="plan-color-label">緑 — 再生</span>
+              <span class="plan-color-label">緑</span>
               <span class="plan-title">世界遺産を歩く御嶽山トレッキング体験</span>
             </div>
           </div>
@@ -179,7 +179,7 @@
           <div class="plan-card-header">
             <div class="plan-color-icon">🌙</div>
             <div class="plan-header-text">
-              <span class="plan-color-label">紫 — ロマン</span>
+              <span class="plan-color-label">紫</span>
               <span class="plan-title">神守る島で星空観察体験</span>
             </div>
           </div>
@@ -209,7 +209,7 @@
           <div class="plan-card-header">
             <div class="plan-color-icon">🧂</div>
             <div class="plan-header-text">
-              <span class="plan-color-label">白 — 原点・浄化</span>
+              <span class="plan-color-label">白</span>
               <span class="plan-title">塩爺に学ぶ塩作り体験</span>
             </div>
           </div>
