Add text emphasis to plan descriptions

--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
               <img src="images/plan_yellow_2.webp" alt="甘夏体験の集合写真">
             </figure>
             <p class="plan-description">
-              大島の春を象徴する柑橘「甘夏」。3月初旬から5月末にかけて、島内の農家の圃場に足を運び、たわわに実った甘夏みかんを自分の手で収穫するところから体験が始まります。太陽の光をたっぷり浴びて育った甘夏は、酸味と甘みのバランスが絶妙。収穫後は、地元の講師の指導のもと、もぎたての果実を使って甘夏ソースや爽やかな甘夏シェイクを手作りします。
+              大島の春を象徴する柑橘<strong>「甘夏」</strong>。3月初旬から5月末にかけて、島内の農家の圃場に足を運び、たわわに実った甘夏みかんを<strong>自分の手で収穫する</strong>ところから体験が始まります。太陽の光をたっぷり浴びて育った甘夏は、酸味と甘みのバランスが絶妙。収穫後は、地元の講師の指導のもと、もぎたての果実を使って<strong>甘夏ソース</strong>や爽やかな<strong>甘夏シェイク</strong>を手作りします。
             </p>
             <p class="plan-description">
-              作業の合間には、島の農業の歴史や甘夏栽培の裏話を聞くことができるのも、このプランの魅力です。体を動かした後のランチには、大島近海で獲れた地魚をふんだんに使ったフィッシュサンドをご用意。潮風を感じながらいただく一皿は格別です。余ったソースはそのままお土産としてお持ち帰りいただけるので、ご自宅でも島の味を楽しめます。冬の疲れを吹き飛ばし、ビタミンをチャージする"春限定"の贅沢体験です。
+              作業の合間には、島の農業の歴史や甘夏栽培の裏話を聞くことができるのも、このプランの魅力です。体を動かした後のランチには、大島近海で獲れた地魚をふんだんに使った<strong>フィッシュサンド</strong>をご用意。潮風を感じながらいただく一皿は格別です。余ったソースはそのまま<strong>お土産としてお持ち帰り</strong>いただけるので、ご自宅でも島の味を楽しめます。冬の疲れを吹き飛ばし、ビタミンをチャージする<strong>"春限定"の贅沢体験</strong>です。
             </p>
             <p class="plan-info">
               <strong>期間：</strong>2026年3月1日～5月31日（春季限定）<br>
@@ -129,10 +129,10 @@
               <img src="images/plan_red_2.webp" alt="玄海旅館で味わう新鮮な地魚料理">
             </figure>
             <p class="plan-description">
-              「五色の旅」の中で最もハイエンドなプランです。朝、玄海旅館に集合し、プロの手による着付けで正装に身を整えるところから一日が始まります。背筋を伸ばし、着物をまとった状態で宗像大社辺津宮へ。毎月1日・15日にのみ執り行われる「月次祭（つきなみさい）」を観覧する貴重な機会に参列します。通常の観光では入ることのできない神聖な空間で、良縁と感謝を祈る時間は、参加者にとって忘れがたい記憶となるでしょう。
+              「五色の旅」の中で<strong>最もハイエンドなプラン</strong>です。朝、玄海旅館に集合し、<strong>プロの手による着付け</strong>で正装に身を整えるところから一日が始まります。背筋を伸ばし、着物をまとった状態で宗像大社辺津宮へ。毎月1日・15日にのみ執り行われる<strong>「月次祭（つきなみさい）」</strong>を観覧する貴重な機会に参列します。通常の観光では入ることのできない神聖な空間で、良縁と感謝を祈る時間は、参加者にとって忘れがたい記憶となるでしょう。
             </p>
             <p class="plan-description">
-              月次祭のあとは昼食をとり、フェリーで大島へ渡ります。中津宮・沖津宮遥拝所を巡り、宗像三女神すべてにご挨拶する一日がかりの特別参拝コースです。着物レンタル・着付け、船代、タクシー代、ガイド料がすべて含まれたオールインクルーシブ仕様なので、手ぶらで参加できるのも安心です。和装・神事・食・島旅——これらが一体となった体験は他に例がなく、宗像の文化と信仰の本質に最も深く触れることのできる唯一無二のプログラムです。
+              月次祭のあとは昼食をとり、フェリーで大島へ渡ります。中津宮・沖津宮遥拝所を巡り、<strong>宗像三女神すべてにご挨拶する</strong>一日がかりの特別参拝コースです。着物レンタル・着付け、船代、タクシー代、ガイド料がすべて含まれた<strong>オールインクルーシブ仕様</strong>なので、手ぶらで参加できるのも安心です。和装・神事・食・島旅——これらが一体となった体験は他に例がなく、宗像の文化と信仰の本質に最も深く触れることのできる<strong>唯一無二のプログラム</strong>です。
             </p>
             <p class="plan-info">
               <strong>期間：</strong>2026年4月1日～2027年3月15日（毎月1日・15日限定）<br>
@@ -159,10 +159,10 @@
               <img src="images/plan_green_2.webp" alt="風車展望所からの夕景">
             </figure>
             <p class="plan-description">
-              大島の最高峰・御嶽山（みたけさん、標高224m）は、世界遺産の構成資産として認められた神聖な山です。経験豊富な島のガイドとともに、原生林の木漏れ日を浴びながら山道を歩き、山頂を目指します。登山道の途中には、戦時中に築かれた砲台跡が残り、島の歴史を肌で感じることができます。山頂からは360度の大パノラマが広がり、玄界灘と沖ノ島方面の水平線が一望。天気のいい日には、遠く壱岐・対馬の島影まで見渡せることもあります。
+              大島の最高峰・<strong>御嶽山（みたけさん、標高224m）</strong>は、<strong>世界遺産の構成資産</strong>として認められた神聖な山です。経験豊富な島のガイドとともに、原生林の木漏れ日を浴びながら山道を歩き、山頂を目指します。登山道の途中には、戦時中に築かれた砲台跡が残り、島の歴史を肌で感じることができます。山頂からは<strong>360度の大パノラマ</strong>が広がり、玄界灘と沖ノ島方面の水平線が一望。天気のいい日には、遠く壱岐・対馬の島影まで見渡せることもあります。
             </p>
             <p class="plan-description">
-              下山後は風車展望所に立ち寄り、大島の全景を眺めつつ地元食材を使ったお弁当を堪能。午後は世界遺産構成施である沖ノ島遙拝所や、海辺の景色が楽しめる夢の小夜島（さよしま）など、スポットをガイドの解説付きで歩きます。約6.5時間かけて島をじっくり一周する本格コースですが、初心者でも無理なく楽しめるペースで進みます。心地よい疲労感と森の空気で心身をデトックス——眼下に広がる玄界灘の絶景が、日常から離れる解放感を与えてくれます。
+              下山後は<strong>風車展望所</strong>に立ち寄り、大島の全景を眺めつつ地元食材を使ったお弁当を堪能。午後は世界遺産構成施である<strong>沖ノ島遙拝所</strong>や、海辺の景色が楽しめる<strong>夢の小夜島（さよしま）</strong>など、スポットをガイドの解説付きで歩きます。約6.5時間かけて島をじっくり一周する本格コースですが、<strong>初心者でも無理なく楽しめる</strong>ペースで進みます。心地よい疲労感と森の空気で心身をデトックス——眼下に広がる玄界灘の絶景が、日常から離れる解放感を与えてくれます。
             </p>
             <p class="plan-info">
               <strong>期間：</strong>通年（2026年4月1日～2027年3月31日）<br>
@@ -189,10 +189,10 @@
               <img src="images/plan_purple_2.webp" alt="満天の星空">
             </figure>
             <p class="plan-description">
-              大島の夜は、都会では想像もつかないほどの暗さと静けさに包まれます。このプランは、最終フェリーが出航した後の「島時間」を丸ごと味わう宿泊型のプログラムです。夕方に集合し、島の民宿「とかいやゲストハウス」にチェックインした後、ガイドとともに砲台跡の高台へ。玄界灘の水平線に沈む夕日を眺め、空がオレンジからだんだんと群青に変わっていく劇的な時間を共有します。
+              大島の夜は、都会では想像もつかないほどの暗さと静けさに包まれます。このプランは、最終フェリーが出航した後の<strong>「島時間」を丸ごと味わう宿泊型</strong>のプログラムです。夕方に集合し、島の民宿<strong>「とかいやゲストハウス」</strong>にチェックインした後、ガイドとともに砲台跡の高台へ。玄界灘の水平線に沈む夕日を眺め、空がオレンジからだんだんと群青に変わっていく劇的な時間を共有します。
             </p>
             <p class="plan-description">
-              日没後は、人工の光がほとんどない島ならではの満天の星空が広がります。冬はオリオン座、夏は天の川——七夕伝説発祥の地で見上げる星空は格別です。ガイドによる星座の解説を聞きながら、波の音だけが聞こえる暗闇の中で自分自身と向き合う贅沢な時間。翌朝は、潮の香りとともに目覚め、朝の静かな島を歩いてからフェリーで戻ります。宿泊費（素泊まり）込みの料金なので、ふらりと「泊まる旅」ができるのもこのプランの魅力です。
+              日没後は、人工の光がほとんどない島ならではの<strong>満天の星空</strong>が広がります。冬はオリオン座、夏は天の川——<strong>七夕伝説発祥の地</strong>で見上げる星空は格別です。ガイドによる星座の解説を聞きながら、波の音だけが聞こえる暗闇の中で自分自身と向き合う贅沢な時間。翌朝は、潮の香りとともに目覚め、朝の静かな島を歩いてからフェリーで戻ります。<strong>宿泊費（素泊まり）込み</strong>の料金なので、ふらりと「泊まる旅」ができるのもこのプランの魅力です。
             </p>
             <p class="plan-info">
               <strong>期間：</strong>通年（2026年3月1日～2027年3月31日、繁忙期除く）<br>
@@ -219,10 +219,10 @@
               <img src="images/plan_white_2.webp" alt="塩爺こと河辺さん">
             </figure>
             <p class="plan-description">
-              大島村商店を営む「塩爺（しおじい）」こと河辺さんは、大島の海水から塩をイチから手作りし、販売まで手がける島の有名人です。このプランでは、河辺さんの案内のもと、海水を汲み上げ、薪の火で丁寧に炊き上げて塩の結晶を作り出す一連の工程を体験します。塩作りの背景にある海と山の関係、大島の自然環境のことを、河辺さんの軽妙な語り口で学ぶ時間は、子どもから大人まで誰もが夢中になるひとときです。
+              大島村商店を営む<strong>「塩爺（しおじい）」こと河辺さん</strong>は、大島の海水から塩をイチから手作りし、販売まで手がける島の有名人です。このプランでは、河辺さんの案内のもと、海水を汲み上げ、<strong>薪の火で丁寧に炊き上げて塩の結晶を作り出す</strong>一連の工程を体験します。塩作りの背景にある海と山の関係、大島の自然環境のことを、河辺さんの軽妙な語り口で学ぶ時間は、<strong>子どもから大人まで誰もが夢中になる</strong>ひとときです。
             </p>
             <p class="plan-description">
-              体験の最後には、できたての塩をまぶしたおにぎりを実食。自分で作った塩で握るおにぎりの味は、素朴ながらも忘れられない「島の味」として記憶に残るはず。余った塩はお土産としてお持ち帰りいただけます。所要時間は約1.5時間と最も短いプランなので、フェリーの日帰りスケジュールにも組み込みやすいのが嬉しいポイント。大人もお子さまも同一料金で参加できるため、ご家族連れにも人気の体験です。
+              体験の最後には、<strong>できたての塩をまぶしたおにぎり</strong>を実食。自分で作った塩で握るおにぎりの味は、素朴ながらも忘れられない「島の味」として記憶に残るはず。余った塩はお土産としてお持ち帰りいただけます。所要時間は<strong>約1.5時間と最も短いプラン</strong>なので、フェリーの日帰りスケジュールにも組み込みやすいのが嬉しいポイント。<strong>大人もお子さまも同一料金</strong>で参加できるため、ご家族連れにも人気の体験です。
             </p>
             <p class="plan-info">
               <strong>期間：</strong>通年（2026年4月1日～2027年3月31日）<br>
