Update message section text

--- a/index.html
+++ b/index.html
@@ -243,10 +243,10 @@
       </h2>
 
       <p>
-        大島には、コンビニも派手なアトラクションもありません。あるのは、悠久の歴史と豊かな自然、そして温かい島の人々だけです。
+        「大島観光の原点は、私が惚れ込んだ『島の人々』にあります。ここにはコンビニも派手な施設もありません。あるのは悠久の歴史、豊かな自然、そして温かなコミュニティだけ。だからこそ私の企画は常に『何をやるか』より『誰とやるか』から始まります。
       </p>
       <p>
-        この「五色の旅」は、そんな島のありのままの日常に、少しだけ深く触れていただくための入り口です。願いを短冊に込めるように、あなたの心を休めにいらしてください。心より、お待ちしています。
+        『五色の旅』は、そんな島のありのままに触れ、心を休めるための入り口です。願いを短冊に込めるように、あなた本来の自分を取り戻しにいらしてください。」
       </p>
       <p class="message-author">
         — 一般社団法人 宗像観光協会
