Rename section to メッセージ, update author to 事務局長

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
       <!-- ===== Section 4: Message ===== -->
       <h2>
-        宗像観光協会より
+        メッセージ
         <span class="subtitle">～「何もしない」をしに来てください～</span>
       </h2>
 
@@ -249,7 +249,7 @@
         『五色の旅』は、そんな島のありのままに触れ、心を休めるための入り口です。願いを短冊に込めるように、あなた本来の自分を取り戻しにいらしてください。」
       </p>
       <p class="message-author">
-        — 一般社団法人 宗像観光協会
+        <strong>— 一般社団法人 宗像観光協会 事務局長</strong>
       </p>
 
       <!-- ===== Section 5: Reservation ===== -->
