Update reservation steps and make bold

--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@
       <h3>ご予約の流れ</h3>
 
       <ol class="reservation-steps-simple">
-        <li>公式サイトのフォームまたはメール・電話で空き状況をお問い合わせください。</li>
-        <li>事務局（宗像観光協会）からの調整連絡を経て、予約が確定します。</li>
-        <li>当日は各自集合場所までお越しください。フェリーで大島へ渡ります。</li>
+        <li><strong>公式サイトのフォームまたはメール・電話で空き状況をお問い合わせください。</strong></li>
+        <li><strong>事務局（宗像観光協会）からの調整連絡を経て、予約が確定します。</strong></li>
+        <li><strong>当日は各自集合場所までお越しください。</strong></li>
       </ol>
 
       <h3>お問い合わせ先</h3>
