Add name 品川恭徳 to message author

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         『五色の旅』は、そんな島のありのままに触れ、心を休めるための入り口です。願いを短冊に込めるように、あなた本来の自分を取り戻しにいらしてください。」
       </p>
       <p class="message-author">
-        <strong>— 一般社団法人 宗像観光協会 事務局長</strong>
+        <strong>— 一般社団法人 宗像観光協会 事務局長 品川恭徳</strong>
       </p>
 
       <!-- ===== Section 5: Reservation ===== -->
