Add detailed cancel policy table with styling

--- a/index.html
+++ b/index.html
@@ -287,7 +287,42 @@
 
       <h3>キャンセルポリシー</h3>
       <p>
-        旅行開始日前日から起算して遡って21日前 無料・20日目〜8日目の解除20％・7日目〜2日前の解除30％・旅行開始日の前日50％・旅行開始後100％
+        <strong>■キャンセル料について</strong><br>
+        ご予約確定後、お客様のご都合によりキャンセルされる場合は、以下の規定に基づきキャンセル料を申し受けます。日程変更をご希望の場合も、時期によってはキャンセル料の対象となる場合がございますので、あらかじめご了承ください。
+      </p>
+      <table class="cancel-table">
+        <thead>
+          <tr>
+            <th>キャンセルのお申し出日</th>
+            <th>キャンセル料</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>旅行開始日の21日前まで</td>
+            <td>無料</td>
+          </tr>
+          <tr>
+            <td>20日前～8日前</td>
+            <td>代金の 20%</td>
+          </tr>
+          <tr>
+            <td>7日前～2日前</td>
+            <td>代金の 30%</td>
+          </tr>
+          <tr>
+            <td>旅行開始日の前日</td>
+            <td>代金の 50%</td>
+          </tr>
+          <tr>
+            <td>旅行開始日の当日・無連絡</td>
+            <td>代金の 100%</td>
+          </tr>
+        </tbody>
+      </table>
+      <p class="cancel-note">
+        ※「旅行開始日」とは、当日の集合時間を基準とします。<br>
+        ※返金の際の振込手数料は、お客様ご負担となりますのでご了承ください。
       </p>
 
     </div><!-- /.article-body -->
