Replace hero image with top_hero_v3.png and update styles

--- a/index.html
+++ b/index.html
@@ -16,14 +16,25 @@
     <!-- ===== Hero Section ===== -->
     <section class="hero-section">
       <div class="hero-image">
-        <img src="images/top_hero.jpg" alt="砲台跡から望む風車と海">
-        <img src="images/top_overlay_design.png" class="hero-overlay-design" alt="五色の旅">
-        <div class="hero-title-overlay">
-          <span class="hero-kicker">福岡・宗像｜フェリーで25分の世界遺産</span>
-          <h1>「むなかた大島・五色の旅」で、<br>願いを叶える週末を。</h1>
-        </div>
+        <img src="images/top_hero_v3.png" alt="むなかた大島・五色の旅">
       </div>
-      <div class="hero-caption">提供：一般社団法人 宗像観光協会　制作：宗像経済新聞編集部</div>
+      <!-- 画像内にロゴ・テキストが含まれているため非表示
+      <img src="images/top_overlay_design.png" alt="むなかた大島 五色の旅 ロゴ" class="hero-overlay-design">
+      -->
+      <div class="hero-overlay"></div>
+
+      <!-- 画像内にテキストが含まれているため非表示
+      <div class="hero-title-overlay">
+        <p class="hero-kicker">福岡・宗像 ｜ フェリーで25分の世界遺産</p>
+        <h1>
+          「むなかた大島・五色の旅」で、<br>
+          願いを叶える週末を。
+        </h1>
+      </div>
+      -->
+
+      <div class="hero-caption">
+        提供：一般社団法人 宗像観光協会　制作：宗像経済新聞編集部</div>
     </section>
 
     <!-- ===== Article Body ===== -->
